tests/data/upgrade-test-resources/tcp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tcp
  template:
    metadata:
      labels:
        app: tcp
    spec:
      containers:
        - name: tcp-service
          image: ghcr.io/nginx/kic-test-tcp-server:0.2.6
          ports:
            - containerPort: 3333
              name: tcp-server
              protocol: TCP
