tests/data/upgrade-test-resources/transport-server.yaml
apiVersion: k8s.nginx.org/v1
kind: TransportServer
metadata:
  name: transport-server
spec:
  listener:
    name: tcp-server
    protocol: TCP
  upstreams:
    - name: tcp-app
      service: tcp-service
      port: 3333
  action:
    pass: tcp-app
